# HoshinoEngine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  imgui.ini  xmake.lua
Res/: xmake.lua
Res/Shader/Frag/: Blue.glsl  Normal.glsl  fLighting.glsl
Res/Shader/Hlsl/: frag.hlsl  (+1 more)
Shader/: xmake.lua
Shader/Frag/: Blue.glsl
Shader/Vert/: Vertex.vert
src/: main.cpp
src/Client/: CMakeLists.txt  xmake.lua
src/Client/Private/: ClientApp.cpp
src/Client/Private/Layer/: ClientImguiLayer.cpp  RenderLayer.cpp  TestLayer.cpp
src/Client/Public/Akane/: SandboxApplication.h
src/Client/Public/Akane/Layer/: ClientImguiLayer.h  RenderLayer.h  TestLayer.h
src/Hoshino/: Application.cpp  CMakeLists.txt  Entry.cpp  Hoshino.cpp  xmake.lua
src/Hoshino/Private/: Entry.cpp
src/Hoshino/Private/Core/: Application.cpp  Entry.cpp  Log.cpp
src/Hoshino/Private/Core/Layer/: ImGuiLayer.cpp  LayerStack.cpp
src/Hoshino/Private/Enum/: KeyCode.cpp
src/Hoshino/Private/Hoshino/: Application.cpp  Entry.cpp  KeyCode.cpp  Log.cpp  Scene.cpp  Window.cpp
src/Hoshino/Private/Hoshino/Asset/: AssetImporter.cpp
src/Hoshino/Private/Hoshino/Graphics/: Camera.cpp  FrameBuffer.cpp  Material.cpp  Mesh.cpp  MeshRenderObject.cpp  RenderAPI.cpp  RenderCommand.cpp  Renderer.cpp  Texture.cpp
src/Hoshino/Private/Hoshino/Layer/: ImGuiLayer.cpp  LayerStack.cpp
src/Hoshino/Private/Hoshino/Renderer/: DeviceManager.cpp  ShaderCompiler.cpp  ShaderFactory.cpp
src/Hoshino/Private/Hoshino/Vfs/: Blob.cpp  VfsUtils.cpp
src/Hoshino/Private/Layer/: LayerStack.cpp
src/Hoshino/Private/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLFrameBuffer.cpp  OpenGLGraphicsContext.cpp  OpenGLMaterial.cpp  OpenGLRenderAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
src/Hoshino/Private/Platform/Vulkan/: VulkanDeviceManager.cpp  VulkanSwapChain.cpp
src/Hoshino/Private/Platform/Window/: WindowsWindow.cpp
src/Hoshino/Private/Platform/Windows/: WindowsInput.cpp  WindowsKeyCodeWrapper.cpp  WindowsWindow.cpp
src/Hoshino/Public/: HoshinoMin.h  HoshinoPch.h  stb_image.h
src/Hoshino/Public/Core/: Application.h  Assert.h  Entry.h  HoshinoCore.h  HoshinoPch.h  Log.h  Macro.h
src/Hoshino/Public/Core/Event/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
src/Hoshino/Public/Core/Layer/: ImGuiLayer.h  Layer.h  LayerStack.h
src/Hoshino/Public/Core/Window/: Window.h  WindowProps.h
src/Hoshino/Public/Enum/: KeyCode.h
src/Hoshino/Public/Event/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
src/Hoshino/Public/Hoshino/: Application.h  Assert.h  Entry.h  HoshinoCore.h  Input.h  KeyCode.h  Log.h  Macro.h  Scene.h  TimeStep.h  Transform.h
src/Hoshino/Public/Hoshino/Asset/: AssetImporter.h
src/Hoshino/Public/Hoshino/Event/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
src/Hoshino/Public/Hoshino/Graphics/: Buffer.h  BufferLayout.h  Camera.h  FrameBuffer.h  GraphicsContext.h  Material.h  Mesh.h  MeshRenderObject.h  RenderAPI.h  RenderCommand.h  RenderObject.h  Renderer.h  Shader.h  Texture.h  VertexArray.h
src/Hoshino/Public/Hoshino/Layer/: ImGuiLayer.h  Layer.h  LayerStack.h
src/Hoshino/Public/Hoshino/Renderer/: Device.h  DeviceManager.h  RenderMessageCallback.h  Shader.h  ShaderCompiler.h  ShaderFactory.h  TextureFormat.h
src/Hoshino/Public/Hoshino/Vfs/: Blob.h  VfsUtils.h
src/Hoshino/Public/Hoshino/Window/: Window.h  WindowProps.h
src/Hoshino/Public/Layer/: Layer.h  LayerStack.h
src/Hoshino/Public/Platform/OpenGL/: ImGuiOpenGLRenderer.h  OpenGLBuffer.h  OpenGLFrameBuffer.h  OpenGLGraphicsContext.h  OpenGLMaterial.h  OpenGLRenderAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h  Utils.h
src/Hoshino/Public/Platform/Vulkan/: VulkanDeviceManager.h  VulkanSwapChain.h
src/Hoshino/Public/Platform/Window/: Window.h  WindowProps.h
src/Hoshino/Public/Platform/Window/Windows/: WindowsWindow.h
src/Hoshino/Public/Platform/Windows/: WindowsInput.h  WindowsKeyCodeWrapper.h  WindowsWindow.h
src/Hoshino/core/: Log.cpp
src/Hoshino/includes/: Application.h  Hoshino.h  HoshinoCore.h  Log.h
src/Hoshino/includes/Event/: Event.h  KeyEvent.h
src/Sandbox/: SandboxEntry.cpp  xmake.lua
src/nvrhi/: xmake.lua
(+2 files in other folders)
